Styled Console text using Colorama and fixed a few bugs

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,20 +10,35 @@ click==8.1.3
 colorama==0.4.6
 docopt==0.6.2
 exceptiongroup==1.1.1
+ffmpeg-python==0.2.0
+future==0.18.3
 h11==0.14.0
 idna==3.4
+keyboard==0.13.5
+MouseInfo==0.1.3
 outcome==1.2.0
 packaging==23.0
 pefile==2023.2.7
+ping3==4.0.4
 pip-tools==6.12.3
 pipreqs==0.4.11
+playsound==1.3.0
 psutil==5.9.4
+PyAutoGUI==0.9.53
 pycparser==2.21
+pydub==0.25.1
+pygame==2.3.0
+PyGetWindow==0.0.9
 pyinstaller==5.9.0
 pyinstaller-hooks-contrib==2023.1
+PyMsgBox==1.0.9
+pyperclip==1.8.2
 pyproject_hooks==1.0.0
+PyRect==0.2.0
+PyScreeze==0.1.28
 PySocks==1.7.1
 python-dotenv==1.0.0
+pytweening==1.0.4
 pywin32==305
 pywin32-ctypes==0.2.0
 requests==2.28.2
