--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-beautifulsoup4==4.12.2
-colorama==0.4.5
-keyboard==0.13.5
-ping3==4.0.4
-psutil==5.9.4
-PyAutoGUI==0.9.53
-pygame==2.3.0
-requests==2.28.2
+# python>=3.11.1
+PyQt6==6.5.1
+requests==2.30.0
+bs4==0.0.1
 selenium==4.9.1
+webdriver-manager==3.8.6
+anitopy==2.1.1
+appdirs==1.4.4
+pyinstaller==5.13.0
 tqdm==4.65.0
-webdriver_manager==3.8.5
