--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,10 +1,11 @@
 # python==3.11.1
 anitopy==2.1.1
 appdirs==1.4.4
-bs4==0.0.1
-cryptography==41.0.3
-PyQt6==6.5.1
-requests==2.31.0
-selenium==4.11.2
-yarl==1.9.2
 random-user-agent==1.0.1
+pylnk3==0.4.2
+bs4==0.0.1
+yarl==1.9.2
+requests==2.31.0
+cryptography==41.0.3
+selenium==4.11.2
+PyQt6==6.5.1
