--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,10 +1,10 @@
 # python==3.11.1
 anitopy==2.1.1
 appdirs==1.4.4
-random-user-agent==1.0.1
+fake_useragent==1.3.0
 pylnk3==0.4.2
 bs4==0.0.1
 yarl==1.9.2
 requests==2.31.0
 cryptography==41.0.3
-PyQt6==6.5.1
+PyQt6==6.6.0
