--- a/metadata.yml
+++ b/metadata.yml
@@ -3,7 +3,7 @@ Creator: SenZmaKi
 Email: senzmaki@gmail.com
 Version: 2.0.7.0
 Description: A desktop app for batch downloading anime and auto-downloading new episodes upon release
-Icon: src/assets/senpwai-icon.ico 
+Icon: src/assets/misc/senpwai-icon.ico 
 Homepage: https://github.com/SenZmaKi/Senpwai
 Company: AKatsuKi Inc.
 Copyright: © AKatsuKi Inc. All rights reserved.
