--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "senpwai"
 version = "2.0.10"
 description = "A desktop app for tracking and batch downloading anime"
-authors = ["Sen ZmaKi <senzmaki@gmail.com>"]
+authors = ["SenZmaKi <senzmaki@gmail.com>"]
 license = "GPL v3"
 readme = "README.md"
 include = ["assets"]
@@ -26,10 +26,13 @@ keywords = [
 "Discord" = "https://discord.gg/invite/e9UxkuyDX2"
 "Reddit" = "https://www.reddit.com/r/Senpwai"
 
+[tool.poetry.scripts]
+senpwai = "senpwai.senpwai:main"
+senpcli = "senpwai.senpcli:main"
+
 [tool.poetry.dependencies]
 python = "^3.11"
 requests = "^2.31.0"
-PyQt6 = "^6.6.0"
 yarl = "^1.9.4"
 cryptography = "^41.0.7"
 anitopy = "^2.1.1"
@@ -38,14 +41,55 @@ appdirs = "^1.4.4"
 tqdm = "^4.66.1"
 argparse = "^1.4.0"
 pylnk3 = "^0.4.2"
+pyqt6 = "^6.6.1"
 
 [tool.poetry.group.dev.dependencies]
 cx-Freeze = "^6.15.12"
-
-[tool.poetry.scripts]
-senpwai = "senpwai.senpwai:main"
-senpcli = "senpwai.senpcli.senpcli:main"
+poethepoet = "^0.24.4"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poe.tasks]
+generate_release = [
+  { ref = "tests" },
+  { ref = "build_exes" },
+  { ref = "compile_installers" },
+  { ref = "run_installers" },
+]
+generate_release_ddl = [
+  { ref = "ddl_tests" },
+  { ref = "build_exes" },
+  { ref = "compile_installers" },
+  { ref = "run_installers" },
+]
+tests = [{ ref = "test_pahe" }, { ref = "test_gogo" }]
+test_pahe = "python -m senpwai.scrapers.test --site pahe all --silent"
+test_gogo = [{ ref = "test_gogo_norm" }, { ref = "test_gogo_hls --silent" }]
+test_gogo_norm = "python -m senpwai.scrapers.test --site gogo all --silent"
+test_gogo_hls = "python -m senpwai.scrapers.test --site gogo all --hls --silent"
+
+ddl_tests = [{ ref = "test_pahe_ddl" }, { ref = "test_gogo_ddl" }]
+test_pahe_ddl = "python -m senpwai.scrapers.test --site pahe direct_links --silent"
+test_gogo_ddl = [{ ref = "test_gogo_norm_ddl" }, { ref = "test_gogo_hls_ddl" }]
+test_gogo_norm_ddl = "python -m senpwai.scrapers.test --site gogo direct_links --silent"
+test_gogo_hls_ddl = "python -m senpwai.scrapers.test --site gogo hls_links --hls --silent"
+
+build_exes = [{ ref = "build_senpwai_exe" }, { ref = "build_senpcli_exe" }]
+build_senpwai_exe = "python setup.py build"
+build_senpcli_exe = "python setup.py --senpcli build"
+
+compile_installers = [
+  { ref = "compile_senpwai_installer" },
+  { ref = "compile_senpcli_installer" },
+]
+compile_senpwai_installer = "iscc setup.iss /Q"
+compile_senpcli_installer = "iscc setup_senpcli.iss /Q"
+
+run_installers = [
+  { ref = "run_senpwai_installer" },
+  { ref = "run_senpcli_installer" },
+]
+run_senpwai_installer = "setups/Senpwai-setup.exe /verysilent"
+run_senpcli_installer = "setups/Senpcli-setup.exe /verysilent"
