--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,7 +83,7 @@ test_gogo_norm = "python -m senpwai.scrapers.test --site gogo all"
 test_gogo_hls = "python -m senpwai.scrapers.test --site gogo all --hls"
 
 ddl_tests = [{ ref = "test_pahe_ddl" }, { ref = "test_gogo_ddl" }]
-test_pahe_ddl = "python -m senpwai.scrapers.test --site pahe direct_link"
+test_pahe_ddl = "python -m senpwai.scrapers.test --site pahe direct_links"
 test_gogo_ddl = [{ ref = "test_gogo_norm_ddl" }, { ref = "test_gogo_hls_ddl" }]
 test_gogo_norm_ddl = "python -m senpwai.scrapers.test --site gogo direct_links"
 test_gogo_hls_ddl = "python -m senpwai.scrapers.test --site gogo hls_links --hls"
