--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,7 +70,7 @@ generate_release = [
   { ref = "install" },
 ]
 generate_release_ddl = [
-  { ref = "ddl_tests" },
+  { ref = "test_ddl" },
   { ref = "build_binaries" },
   { ref = "compile_installers" },
   { ref = "install" },
@@ -81,7 +81,7 @@ test_gogo = [{ ref = "test_gogo_norm" }, { ref = "test_gogo_hls" }]
 test_gogo_norm = "python -m senpwai.scrapers.test --site gogo all"
 test_gogo_hls = "python -m senpwai.scrapers.test --site gogo all --hls"
 
-ddl_tests = [{ ref = "test_pahe_ddl" }, { ref = "test_gogo_ddl" }]
+test_ddl = [{ ref = "test_pahe_ddl" }, { ref = "test_gogo_ddl" }]
 test_pahe_ddl = "python -m senpwai.scrapers.test --site pahe direct_links"
 test_gogo_ddl = [{ ref = "test_gogo_norm_ddl" }, { ref = "test_gogo_hls_ddl" }]
 test_gogo_norm_ddl = "python -m senpwai.scrapers.test --site gogo direct_links"
