--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,12 @@ test-downloads/
 __pycache__/
 .ruff_cache/
 .pytest_cache
+setups/
+build/
+dist/
+.scraps/
+
 allanime.py
 marin.py
-setups
-build
-dist
-.scraps/
 crap.py
+.todo
