--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,14 +86,14 @@ generate_release = [
 test = [{ ref = "test_pahe" }, { ref = "test_gogo" }]
 test_pahe = "python -m senpwai.scrapers.test --site pahe all"
 test_gogo = [{ ref = "test_gogo_norm" }, { ref = "test_gogo_hls" }]
-test_gogo_norm = "python -m senpwai.scrapers.test --site gogo all"
-test_gogo_hls = "python -m senpwai.scrapers.test --site gogo all --hls"
+test_gogo_norm = "python -m senpwai.scrapers.test --site gogo direct_links download"
+test_gogo_hls = "python -m senpwai.scrapers.test --site gogo hls_links download"
 
 test_ddl = [{ ref = "test_pahe_ddl" }, { ref = "test_gogo_ddl" }]
 test_pahe_ddl = "python -m senpwai.scrapers.test --site pahe direct_links"
 test_gogo_ddl = [{ ref = "test_gogo_norm_ddl" }, { ref = "test_gogo_hls_ddl" }]
 test_gogo_norm_ddl = "python -m senpwai.scrapers.test --site gogo direct_links"
-test_gogo_hls_ddl = "python -m senpwai.scrapers.test --site gogo hls_links --hls"
+test_gogo_hls_ddl = "python -m senpwai.scrapers.test --site gogo hls_links"
 
 build_exes = [{ ref = "build_senpwai_exe" }, { ref = "build_senpcli_exe" }]
 build_senpwai_exe = "python -m scripts.setup build"
