--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -2,5 +2,6 @@
   "venvPath": ".",
   "venv": ".venv",
   "root": "senpwai/",
-  "pythonPlatform": "All"
+  "pythonPlatform": "All",
+  "typeCheckingMode": "standard"
 }
