--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,85 +1,77 @@
 name: test
 
 on:
-    push:
-        branches:
-            - master
+  push:
+    branches:
+      - master
 
-    pull_request:
-        branches:
-            - master
+  pull_request:
+    branches:
+      - master
 
-    workflow_dispatch:
-
-    schedule:
-        # 6:00 A.M UTC  == 9:00 AM EAT
-        - cron: "0 6 * * *"
+  schedule:
+    # 6:00 A.M UTC  == 9:00 AM EAT
+    - cron: "0 6 * * *"
 
 jobs:
-    test:
-        runs-on: ubuntu-latest
+  test:
+    runs-on: ubuntu-latest
 
-        steps:
-            - name: Checkout repository
-              uses: actions/checkout@v4
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-            - name: Set up Python
-              uses: actions/setup-python@v4
-              with:
-                  python-version: "3.11"
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
 
-            - name: Install dependencies
-              run: |
+      - name: Install dependencies
+        run: |
 
-                  python -m pip install --upgrade pip
-                  pip install -r dev-requirements.txt
-                  poetry install
+          python -m pip install --upgrade pip
+          pip install -r dev-requirements.txt
+          poetry install
 
-            - name: Lint
-              id: lint
-              continue-on-error: true
-              run: poetry run ruff .
+      - name: Lint
+        id: lint
+        continue-on-error: true
+        run: poetry run ruff .
 
-            - name: Install chrome
-              uses: browser-actions/setup-chrome@v1
-              id: setup-chrome
+      - name: Test Pahe
+        id: test_pahe
+        continue-on-error: true
+        run: poetry run poe test_pahe_dpl
 
-            - name: Test Pahe
-              id: test_pahe
-              continue-on-error: true
+      - name: Test Gogo Norm
+        id: test_gogo_norm
+        continue-on-error: true
+        run: poetry run poe test_gogo_norm_ddl
 
-              run: poetry run poe test_pahe_ddl --browser chrome
+      - name: Test Gogo HLS
+        id: test_gogo_hls
+        continue-on-error: true
+        run: poetry run poe test_gogo_hls_ddl
 
-            - name: Test Gogo Norm
-              id: test_gogo_norm
-              continue-on-error: true
-              run: poetry run poe test_gogo_norm_ddl
-
-            - name: Test Gogo HLS
-              id: test_gogo_hls
-              continue-on-error: true
-              run: poetry run poe test_gogo_hls_ddl
-
-            - name: Check results
-              run: |
-                  failed=false
-                  if [ ${{ steps.lint.outcome }} == "failure" ]; then
-                    echo "Lint failed"
-                    failed=true
-                  fi
-                  if [ ${{ steps.test_pahe.outcome }} == "failure" ]; then
-                    echo "Test Pahe failed"
-                    failed=true
-                  fi
-                  if [ ${{ steps.test_gogo_norm.outcome }} == "failure" ]; then
-                    echo "Test Gogo Norm failed"
-                    failed=true
-                  fi
-                  if [ ${{ steps.test_gogo_hls.outcome }} == "failure" ]; then
-                    echo "Test Gogo HLS failed"
-                    failed=true
-                  fi
-                  if [ $failed  = true ]; then
-                    exit 1
-                  fi
-
+      - name: Check results
+        run: |
+          failed=false
+          if [ ${{ steps.lint.outcome }} == "failure" ]; then
+            echo "Lint failed"
+            failed=true
+          fi
+          if [ ${{ steps.test_pahe.outcome }} == "failure" ]; then
+            echo "Test Pahe failed"
+            failed=true
+          fi
+          if [ ${{ steps.test_gogo_norm.outcome }} == "failure" ]; then
+            echo "Test Gogo Norm failed"
+            failed=true
+          fi
+          if [ ${{ steps.test_gogo_hls.outcome }} == "failure" ]; then
+            echo "Test Gogo HLS failed"
+            failed=true
+          fi
+          if [ $failed  = true ]; then
+            exit 1
+          fi
