--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,18 +11,18 @@ exclude = ["src/**/test.py"]
 repository = "https://github.com/SenZmaKi/Senpwai"
 documentation = "https://github.com/SenZmaKi/Senpwai/blob/master/README.md"
 keywords = [
-  "anime",
-  "app",
-  "cli",
-  "desktop app",
-  "anime downloader",
-  "anime cli",
-  "anime app",
-  "anime tracker",
-  "batch anime downloader",
-  "bulk anime  downloader",
-  "anime desktop app",
-  "anime tracker app",
+    "anime",
+    "app",
+    "cli",
+    "desktop app",
+    "anime downloader",
+    "anime cli",
+    "anime app",
+    "anime tracker",
+    "batch anime downloader",
+    "bulk anime  downloader",
+    "anime desktop app",
+    "anime tracker app",
 ]
 
 [tool.cx_freeze]
@@ -57,6 +57,7 @@ pyqt6 = "^6.6.1"
 cx-freeze = "^6.15.12"
 ruff = "^0.2.1"
 poethepoet = "^0.24.4"
+poetry-plugin-export = "^1.8.0"
 
 [build-system]
 requires = ["poetry-core"]
@@ -64,6 +65,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poe.tasks]
 release = "python -m scripts.release"
+export_dependencies = "poetry export -f requirements.txt --output requirements.txt"
 bump_version = "python -m scripts.bump_version"
 announce = "python -m scripts.announce"
 announce_discord = "python scripts/announce/discord.py"
@@ -71,16 +73,20 @@ announce_reddit = "python  scripts/announce/reddit.py"
 format = "python -m scripts.ruff --format"
 lint_fix = "python -m scripts.ruff --lint_fix"
 lint = "python -m scripts.ruff --lint"
-build_release_test = [{ref = "lint"}, { ref = "test" }, { ref = "build_release" }]
+build_release_test = [
+    { ref = "lint" },
+    { ref = "test" },
+    { ref = "build_release" },
+]
 build_release_ddl = [{ ref = "test_ddl" }, { ref = "build_release" }]
 build_release = [
-  { ref = "build_exes" },
-  { ref = "compile_installers" },
-  { ref = "install" },
-  { ref = "run_exes" },
-  { ref = "build_pip" },
-  { ref = "install_pip" },
-  { ref = "run_pip_exes" },
+    { ref = "build_exes" },
+    { ref = "compile_installers" },
+    { ref = "install" },
+    { ref = "run_exes" },
+    { ref = "build_pip" },
+    { ref = "install_pip" },
+    { ref = "run_pip_exes" },
 ]
 test = [{ ref = "test_pahe" }, { ref = "test_gogo" }]
 test_pahe = "python -m senpwai.scrapers.test --site pahe all"
@@ -100,8 +106,8 @@ build_senpwai_exe = "python -m scripts.setup build"
 build_senpcli_exe = "python -m scripts.setup --senpcli build"
 
 compile_installers = [
-  { ref = "compile_senpwai_installer" },
-  { ref = "compile_senpcli_installer" },
+    { ref = "compile_senpwai_installer" },
+    { ref = "compile_senpcli_installer" },
 ]
 compile_senpwai_installer = "iscc scripts/setup.iss /Q"
 compile_senpcli_installer = "iscc scripts/setup_senpcli.iss /Q"
@@ -118,8 +124,8 @@ publish_pip = "poetry publish"
 run_all_exes = "python -m scripts.run_exes --all"
 run_exes = [{ ref = "run_senpwai_exe" }, { ref = "run_senpcli_exe" }]
 run_pip_exes = [
-  { ref = "run_senpwai_pip_exe" },
-  { ref = "run_senpcli_pip_exe" },
+    { ref = "run_senpwai_pip_exe" },
+    { ref = "run_senpcli_pip_exe" },
 ]
 run_senpwai_exe = "python -m scripts.run_exes --senpwai"
 run_senpcli_exe = "python -m scripts.run_exes --senpcli"
