--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,6 +100,11 @@ test_pahe_dpl = "python -m senpwai.scrapers.test --site pahe download_page"
 test_gogo_ddl = [{ ref = "test_gogo_norm_ddl" }, { ref = "test_gogo_hls_ddl" }]
 test_gogo_norm_ddl = "python -m senpwai.scrapers.test --site gogo direct_links"
 test_gogo_hls_ddl = "python -m senpwai.scrapers.test --site gogo hls_links"
+test_pip = [
+    { ref = "build_pip" },
+    { ref = "install_pip" },
+    { ref = "run_pip_exes" },
+]
 
 build_exes = [{ ref = "build_senpwai_exe" }, { ref = "build_senpcli_exe" }]
 build_senpwai_exe = "python -m scripts.setup build"
