--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,9 @@ poetry-plugin-export = "^1.8.0"
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.poe]
+envfile = ".env"
+
 [tool.poe.tasks]
 release = "python -m scripts.release"
 export_dependencies = "poetry export -f requirements.txt --output requirements.txt"
