--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,7 @@ on:
 jobs:
     test:
         runs-on: ubuntu-latest
+        timeout-minutes: 5
 
         steps:
             - name: Checkout repository
@@ -45,16 +46,6 @@ jobs:
               continue-on-error: true
               run: poetry run poe test_pahe_dpl
 
-            - name: Test Gogo Norm
-              id: test_gogo_norm
-              continue-on-error: true
-              run: poetry run poe test_gogo_norm_ddl
-
-            - name: Test Gogo HLS
-              id: test_gogo_hls
-              continue-on-error: true
-              run: poetry run poe test_gogo_hls_ddl
-
             - name: Check results
               run: |
                   failed=false
@@ -64,14 +55,6 @@ jobs:
                   fi
                   if [ ${{ steps.test_pahe.outcome }} == "failure" ]; then
                     echo "Test Pahe failed"
-                    failed=true
-                  fi
-                  if [ ${{ steps.test_gogo_norm.outcome }} == "failure" ]; then
-                    echo "Test Gogo Norm failed"
-                    failed=true
-                  fi
-                  if [ ${{ steps.test_gogo_hls.outcome }} == "failure" ]; then
-                    echo "Test Gogo HLS failed"
                     failed=true
                   fi
                   if [ $failed  = true ]; then
